update title and desccription

--- a/src/content/blog/00-micro-changelog/index.mdx
+++ b/src/content/blog/00-micro-changelog/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Everything new in Astro Micro"
+title: "Everything new in STFU and EAT"
 description: "Features, enhancements, and changes."
 date: "2024-05-09"
 ---
@@ -10,7 +10,7 @@ import Callout from "@/components/Callout.astro";
 
 ## Pagefind search 🔎
 
-[Pagefind](https://pagefind.app) is a search library for static websites. Micro uses [Sergey Shishkin's](https://github.com/shishkin) [astro-pagefind](https://github.com/shishkin/astro-pagefind) integration. This integration simplifies development and does not require any changes to the default build script.
+[Pagefind](https://pagefind.app) is a search library for static websites. This site uses [Sergey Shishkin's](https://github.com/shishkin) [astro-pagefind](https://github.com/shishkin/astro-pagefind) integration. This integration simplifies development and does not require any changes to the default build script.
 
 Press <kbd>/</kbd> or <kbd>CTRL</kbd> + <kbd>K</kbd> to open the search dialog. For Mac users, <kbd>⌘</kbd> + <kbd>K</kbd> can also be used. To dismiss the search dialog, press <kbd>Esc</kbd> or click on an area outside the component.
 
