--- a/src/content/blog/04-markdown-syntax/index.mdx
+++ b/src/content/blog/04-markdown-syntax/index.mdx
@@ -10,12 +10,13 @@ import Callout from "@/components/Callout.astro";
 
 ---
 
-## Headings
+This project originated from [astro-nano](https://github.com/markhorn-dev/astro-nano).
 
+This project originated from [astro-nano](https://github.com/markhorn-dev/astro-nano).
+```
 To create headings, use hash symbols (#) followed by a space. The number of hash symbols indicates the heading level.
 
 <Callout>
-  Use `h2` tags instead of `h1` tags in the post. Too many `h1` tags on a single
   page can impact SEO. The post title serves as the `h1`.
 </Callout>
 
