--- a/src/content/blog/05-mdx-syntax/index.mdx
+++ b/src/content/blog/05-mdx-syntax/index.mdx
@@ -51,7 +51,7 @@ import RelativeComponent from "./component.astro";
 
 ---
 
-By default Micro has zero frameworks installed. If you install a framework, components of that framework can be used in MDX files.
+By default this site has zero frameworks installed. If you install a framework, components of that framework can be used in MDX files.
 
 <Callout>
   Don't forget to use [client
