--- a/src/content/recipes/meatball-sub/index.mdx
+++ b/src/content/recipes/meatball-sub/index.mdx
@@ -12,25 +12,23 @@ tags:
   - marinara
   - sub
   - beef
+ingredients:
+  - [450, "g", "ground beef (or a mix of beef and pork)"]
+  - [0.5, "cup", "plain breadcrumbs"]
+  - [0.25, "cup", "grated Parmesan"]
+  - [1, "large", "egg"]
+  - [2, "cloves", "garlic, minced"]
+  - [1, "tsp", "salt"]
+  - [0.5, "tsp", "black pepper"]
+  - [1, "tsp", "dried oregano"]
+  - [0.5, "tsp", "red pepper flakes (optional)"]
+  - [2, "tbsp", "chopped fresh parsley (or 1 tbsp dried)"]
+  - [2, "cup", "marinara sauce"]
+  - [4, "", "submarine rolls (6–8 in)"]
+  - [8, "slices", "provolone or mozzarella"]
+  - [2, "tbsp", "olive oil (for browning)"]
+  - ["to taste", "", "extra grated Parmesan, for serving"]
 ---
-
-## Ingredients
-
-- 1 lb (450 g) ground beef (or a mix of beef and pork)
-- 1/2 cup plain breadcrumbs
-- 1/4 cup grated Parmesan
-- 1 large egg
-- 2 cloves garlic, minced
-- 1 tsp salt
-- 1/2 tsp black pepper
-- 1 tsp dried oregano
-- 1/2 tsp red pepper flakes (optional)
-- 2 tbsp chopped fresh parsley (or 1 tbsp dried)
-- 2 cups marinara sauce
-- 4 submarine rolls (6–8 in)
-- 8 slices provolone or mozzarella
-- 2 tbsp olive oil (for browning)
-- Extra grated Parmesan, for serving
 
 ## Instructions
 
