--- a/src/content/recipes/meatball-sub/index.mdx
+++ b/src/content/recipes/meatball-sub/index.mdx
@@ -16,8 +16,7 @@ ingredients:
   - [450, "g", "ground beef (or a mix of beef and pork)"]
   - [0.5, "cup", "plain breadcrumbs"]
   - [0.25, "cup", "grated Parmesan"]
-  - [1, "large", "egg"]
-  - [2, "cloves", "garlic, minced"]
+  - [1, "", "egg"]
   - [1, "tsp", "salt"]
   - [0.5, "tsp", "black pepper"]
   - [1, "tsp", "dried oregano"]
@@ -25,9 +24,8 @@ ingredients:
   - [2, "tbsp", "chopped fresh parsley (or 1 tbsp dried)"]
   - [2, "cup", "marinara sauce"]
   - [4, "", "submarine rolls (6–8 in)"]
-  - [8, "slices", "provolone or mozzarella"]
+  - [8, "oz", "provolone or mozzarella"]
   - [2, "tbsp", "olive oil (for browning)"]
-  - ["to taste", "", "extra grated Parmesan, for serving"]
 ---
 
 ## Instructions
