--- a/src/content/recipes/whey-oats-chocolate-bar/index.mdx
+++ b/src/content/recipes/whey-oats-chocolate-bar/index.mdx
@@ -17,8 +17,15 @@ ingredients:
   - [.25, 'cup', 'Almond Milk']
 ---
 
+import ExpandableImage from '@components/ExpandableImage.astro';
+
 ## Instructions:
 1. Mash the banana until it is a paste.
+
+<ExpandableImage
+  src="/recipes/whey-oats-chocolate-bar/mashed-banana.jpg"
+  alt="Mashed banana in a bowl" />
+
 2. Add honey, peanut butter, whey, oats, and almond milk to the banana and whisk all the ingredients. Set aside.
 3. Start a pot of boiling water then put a bowl on top and melt the chocolate.
 4. Once choolate is mleted, stir into the rest of the ingredients.
