--- a/src/content/recipes/whey-oats-chocolate-bar/index.mdx
+++ b/src/content/recipes/whey-oats-chocolate-bar/index.mdx
@@ -25,10 +25,33 @@ import ExpandableImage from '@components/ExpandableImage.astro';
 <ExpandableImage
   src="/recipes/whey-oats-chocolate-bar/mashed-banana.jpg"
   alt="Mashed banana in a bowl" />
-
 2. Add honey, peanut butter, whey, oats, and almond milk to the banana and whisk all the ingredients. Set aside.
+
+<ExpandableImage
+  src="/recipes/whey-oats-chocolate-bar/combine-ingredients.jpg"
+  alt="Combining ingredients" />
 3. Start a pot of boiling water then put a bowl on top and melt the chocolate.
+
+<ExpandableImage
+  src="/recipes/whey-oats-chocolate-bar/melting-chocolate.jpg"
+  alt="Melting the chocolate" />
 4. Once choolate is mleted, stir into the rest of the ingredients.
+
 5. Get some wax paper, lay it in a container with edges, and pour the mix into the container.
-6. Store in freezer and let it freeze overnight.
-7. Once frozen cut it into 8 equal pieces.
+
+<ExpandableImage
+  src="/recipes/whey-oats-chocolate-bar/in-the-pan.jpg"
+  alt="Spreading the batter" />
+
+6. Use a spatula to spread chocolate over the top.
+
+<ExpandableImage
+  src="/recipes/whey-oats-chocolate-bar/in-the-freezer.jpg"
+  alt="Preparing to store in freezer" />
+7. Store in freezer and let it freeze overnight.
+
+8. Once frozen cut it into 8 equal pieces.
+
+<ExpandableImage
+  src="/recipes/whey-oats-chocolate-bar/finished.jpg"
+  alt="Preparing to store in freezer" />
