--- a/src/content/recipes/whey-oats-chocolate-bar/index.mdx
+++ b/src/content/recipes/whey-oats-chocolate-bar/index.mdx
@@ -19,8 +19,7 @@ instructions:
   - ["Mash the banana until it is a paste.", "/recipes/whey-oats-chocolate-bar/mashed-banana.jpg"]
   - ["Add honey, peanut butter, whey, oats, and almond milk to the banana and whisk all the ingredients. Set aside.", "/recipes/whey-oats-chocolate-bar/combine-ingredients.jpg"]
   - ["Start a pot of boiling water then put a bowl on top and melt the chocolate.", "/recipes/whey-oats-chocolate-bar/melting-chocolate.jpg"]
-  - ["Once choolate is mleted, stir into the rest of the ingredients.",""]
-  - ["Get some wax paper, lay it in a container with edges, and pour the mix into the container.", "/recipes/whey-oats-chocolate-bar/in-the-pan.jpg"]
+  - ["Get some wax paper, lay it in a container, and pour the mix into the container.", "/recipes/whey-oats-chocolate-bar/in-the-pan.jpg"]
   - ["Use a spatula to spread chocolate over the top.", "/recipes/whey-oats-chocolate-bar/in-the-freezer.jpg"]
   - ["Store in freezer and let it freeze overnight.",""]
   - ["Once frozen cut it into 8 equal pieces.", "/recipes/whey-oats-chocolate-bar/finished.jpg"]
