--- a/src/content/recipes/bacon-egg-cheese/index.mdx
+++ b/src/content/recipes/bacon-egg-cheese/index.mdx
@@ -18,9 +18,9 @@ ingredients:
 instructions:
   - ["Preheat oven to 375 F.", ""]
   - ["Cut the onion into slices.", ""]
-  - ["Put bacon into baking pan and place into oven. Cook for about 15-20 minutes depending on the bacon used.", ""]
+  - ["Put bacon into baking pan and place into oven. Cook for about 15-20 minutes depending on the bacon used.", "recipes/bacon-egg-cheese/bacon.jpeg"]
   - ["With about 5 minutes left on the bacon, add the onion into the baking pan so it cooks in the bacon grease.", ""]
-  - ["Fry the eggs in a pan.", ""]
+  - ["Fry the eggs in a pan.", "recipes/bacon-egg-cheese/eggs.jpeg"]
   - ["Place a slice of cheese on each bun, and put in the oven until cheese is melted on the bun.", ""]
-  - ["Assemble the sandwich: place bacon, egg, and onions on the bun. Enjoy.", ""]
+  - ["Assemble the sandwich: place bacon, egg, and onions on the bun. Enjoy.", "recipes/bacon-egg-cheese/finished.jpeg"]
 ---
